# mbmp-pyomo

./: .gitignore  README.md  config_example.yaml  data.py  data.yaml  main.py  model.py  pyproject.toml  solve.py
mbmp_pyomo/: utils.py
models/: single_period.py
problems/01-food-manufacture/: data.yaml  main.py
problems/01-food-manufacture/models/: __init__.py
src/mbmp_pyomo/: utils.py
src/problems/01-food-manufacture/: data.yaml  main.py
src/problems/01-food-manufacture/models/: __init__.py  multi_period.py  single_period.py
src/problems/food_manufacture/: README.md  main.py
