[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbmp_pyomo"
version = "0.1.0"
description = "Practice problems for modeling and solving optimization problems using Pyomo."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyomo>=6.9.5",
    "pyyaml>=6.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]
